--- a/text_zoom_demo.html
+++ b/text_zoom_demo.html
@@ -17,6 +17,10 @@
 
   <h1>Text Zoom</h1>
   <p>
+    Highlight text. Zoom in and out on it with Ctrl + Scroll, or Ctrl + '=' / '-'
+  </p>
+  <hr>
+  <p>
     Transcription factors (TFs) regulate gene expression, determining cell fates. We are seeking to predict de novo TF activity in any cell, to perform intentional state transitions (e.g., from diseased to healthy). Our research combines mammalian cell culture models, genetic and epigenetic editing, single cell genomics, large-scale CRISPR screens, and various computational approaches to achieve this goal.
     TFs bind to specific DNA sequences, but only occupy a subset of potential sites in each cell type. We study the rules governing this cell type-specific binding and its effects.
     We explore novel stable cell states that can be created with natural TFs. Mapping this opportunity landscape experimentally helps us train deep learning models to predict TF 'recipes' for intentional cell state transitions that do not occur in nature.
